Avalara Fullqa/src/CloudCraze/objects/E_Coupon__c.object
<CustomObject>
    <description>Coupons provide special pricing Rules that can be applied to User&apos;s Carts and Orders</description>
    <fields>
        <fullName>CartTotalAmount__c</fullName>
        <description>Cart total amount to be qualified to have discount</description>
        <label>Cart Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <description>Coupon Code</description>
        <label>Coupon Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CouponId__c</fullName>
        <externalId>true</externalId>
        <label>Coupon Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CouponName__c</fullName>
        <description>Coupon Name</description>
        <label>Coupon Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponType__c</fullName>
        <label>Coupon Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RuleType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Notes__c</fullName>
        <description>Admin description of what a coupon is intended to do</description>
        <inlineHelpText>Please enter the description of what the coupon is suppose to accomplish</inlineHelpText>
        <label>Coupon Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrencyISOCode__c</fullName>
        <description>The currency for which this coupon is valid</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>Discount amount; could be either in percentage or absolute amount</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>This field is populated using a value from the DiscountType Custom Setting.</description>
        <label>DiscountType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <defaultValue>Today() + 60</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxUse__c</fullName>
        <description>Max Use</description>
        <label>Max Use</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinQty__c</fullName>
        <description>Minimum Quantity to be qualified for discount</description>
        <label>Minimun Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RuleName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Rule__c ,Rule__r.Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleType__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CartTotal</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>E_Rule__c</referenceTo>
        <relationshipName>E_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceMinQty__c</fullName>
        <description>Source Minimun Quantity</description>
        <label>Source Minimun Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SourceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>E_Product__c</referenceTo>
        <relationshipName>E_Coupons1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceRelation__c</fullName>
        <label>Source Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SPEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceSpecMiniQty__c</fullName>
        <label>Source Spec Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceSpecValue__c</fullName>
        <description>Source Spec Value</description>
        <label>Source Spec Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to source spec</description>
        <label>Source Spec</label>
        <referenceTo>E_Spec__c</referenceTo>
        <relationshipLabel>CC Coupons</relationshipLabel>
        <relationshipName>CC_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>E_Product__c</referenceTo>
        <relationshipName>E_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetQty__c</fullName>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetRelation__c</fullName>
        <description>Target relation type</description>
        <label>Target Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SPEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetSpecQty__c</fullName>
        <label>Target Spec Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetSpecValue__c</fullName>
        <label>Target Spec Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Spec</label>
        <referenceTo>E_Spec__c</referenceTo>
        <relationshipLabel>CC Coupons (Target Spec)</relationshipLabel>
        <relationshipName>CC_Coupons_TargetSpec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalUsed__c</fullName>
        <description>Total Used</description>
        <label>Total Used</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CouponCode__c</columns>
        <columns>Coupon_Notes__c</columns>
        <columns>RuleType__c</columns>
        <columns>TotalUsed__c</columns>
        <columns>SourceProduct__c</columns>
        <columns>TargetProduct__c</columns>
        <columns>DiscountType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Coupon Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>